--- a/01_simple/nginx.conf
+++ b/01_simple/nginx.conf
@@ -22,7 +22,7 @@ http {
 	# server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
 
-	include /etc/nginx/mime.types;
+	include depend/mime.types;
 	default_type application/octet-stream;
 
 	##
