--- a/12_train_408/nginx.conf
+++ b/12_train_408/nginx.conf
@@ -88,6 +88,14 @@ http {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		}
 
+		# 处理 /api 开头的请求
+		location /api {
+			proxy_pass http://127.0.0.1:5171;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		}
+
 		location / {
 			try_files $uri $uri/ =404;
 		}
