--- a/12_train_408/nginx.conf
+++ b/12_train_408/nginx.conf
@@ -98,7 +98,8 @@ http {
 
 		# 处理 /train_api 开头的请求
 		location /train_api {
-			proxy_pass http://127.0.0.1:5171;
+			# proxy_pass http://127.0.0.1:5171;
+			proxy_pass http://127.0.0.1:5180;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
